# cmpe-295-cmake

./: CMakeLists.txt
include/: ipif.h  utilis.h
src/: ipif.c
test/: test_loop.c  test_zero.c
